--- a/MyProject/composer.json
+++ b/MyProject/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "astrotomic/laravel-translatable": "^11.9",
         "barryvdh/laravel-dompdf": "^0.9.0",
+        "brian2694/laravel-toastr": "^5.56",
         "bumbummen99/shoppingcart": "^4.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
